# avatar-agent

./: .gitignore  README.md  agent.py  main.py  package-lock.json  pyproject.toml  start-agent.ps1
agent-starter-react/: app-config.ts  package-lock.json
agent-starter-react/app/: globals.css  layout.tsx
agent-starter-react/components/: app.tsx  session-view.tsx  welcome.tsx
agent-starter-react/components/livekit/chat/: chat-entry.tsx
